--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -4,9 +4,6 @@ on:
   push:
     branches: [master]
 
-env:
-  JAVA_VERSION: 17
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -31,7 +28,7 @@ jobs:
     #     restore-keys: ${{ runner.os }}-m2
 
     - name: Build with Maven
-      run: mvn clean package -DskipTests
+      run: mvn clean compile assembly:single
 
     - name: Upload build artifact
       uses: actions/upload-artifact@v4
@@ -64,5 +61,5 @@ jobs:
 
     - name: Deploy to AWS EC2
       run: |
-        echo 'DEVOPS Deployment logic'
-      
+        scp -o StrictHostKeyChecking=no target/telegram-bot.jar ubuntu@${{ secrets.EC2_IP }}:/home/ubuntu/bot/telegram-bot.jar
+        ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_IP }} 'sudo systemctl restart telegram-bot.service'
