--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -59,7 +59,17 @@ jobs:
     #     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     #     aws-region: ${{ secrets.AWS_REGION }}
 
-    - name: Deploy to AWS EC2
+    - name: Set up SSH key
       run: |
-        scp -i ${{ secrets.SSH_KEY }} bot/telegram-bot.jar ubuntu@${{ secrets.EC2_IP }}:/home/ubuntu/bot/telegram-bot.jar
-        ssh -i ${{ secrets.SSH_KEY }} ubuntu@${{ secrets.EC2_IP }} 'sudo systemctl restart telegram-bot.service'
+        mkdir -p .ssh
+        echo ${{ secrets.SSH_KEY }} > .ssh/telegram-bot.pem
+        chmod 600 .ssh/telegram-bot.pem
+        SSH_KEYSCAN=$(ssh-keyscan -H ${{ secrets.EC2_IP }})
+        if ! grep -q "$SSH_KEYSCAN" .ssh/known_hosts; then
+          echo "$SSH_KEYSCAN" >> .ssh/known_hosts
+        fi
+
+    - name: Deploy to AWS EC2
+      run: | 
+        scp -i .ssh/telegram-bot.pem bot/telegram-bot.jar ubuntu@${{ secrets.EC2_IP }}:/home/ubuntu/bot/telegram-bot.jar
+        ssh -i .ssh/telegram-bot.pem ubuntu@${{ secrets.EC2_IP }} 'sudo systemctl restart telegram-bot.service'
