fix comment known_hosts

--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -64,9 +64,10 @@ jobs:
         mkdir -p .ssh
         echo "${{ secrets.SSH_KEY }}" > .ssh/telegram-bot.pem
         SSH_KEYSCAN=$(ssh-keyscan -H "${{ secrets.EC2_IP }}")
-        if ! grep -q "$SSH_KEYSCAN" .ssh/known_hosts; then
-          echo "$SSH_KEYSCAN" >> .ssh/known_hosts
-        fi
+        echo "$(SSH_KEYSCAN)"
+        # if ! grep -q "$SSH_KEYSCAN" .ssh/known_hosts; then
+        #   echo "$SSH_KEYSCAN" >> .ssh/known_hosts
+        # fi
 
     - name: Copy build
       run: scp -i .ssh/telegram-bot.pem bot/telegram-bot.jar ubuntu@${{ secrets.EC2_IP }}:/home/ubuntu/bot/telegram-bot.jar
