--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -63,10 +63,13 @@ jobs:
       run: |
         mkdir -p .ssh
         echo "${{ secrets.SSH_KEY }}" > .ssh/telegram-bot.pem
-        # SSH_KEYSCAN=$(ssh-keyscan -H "${{ secrets.EC2_IP }}")
-        
-    - name: Copy build
-      run: scp -i .ssh/telegram-bot.pem bot/telegram-bot.jar ubuntu@${{ secrets.EC2_IP }}:/home/ubuntu/bot/telegram-bot.jar
+        chmod 600 .ssh/telegram-bot.pem
+        SSH_KEYSCAN=$(ssh-keyscan -H "${{ secrets.EC2_IP }}")
+        if ! grep -q "$SSH_KEYSCAN" .ssh/known_hosts; then
+          echo "$SSH_KEYSCAN" >> .ssh/known_hosts
+        fi
 
     - name: Deploy to AWS EC2
-      run: ssh -i .ssh/telegram-bot.pem ubuntu@${{ secrets.EC2_IP }} 'sudo systemctl restart telegram-bot.service'
+      run: |
+        ssh -i .ssh/telegram-bot.pem ubuntu@${{ secrets.EC2_IP }} 'sudo systemctl restart telegram-bot.service'
+        scp -i .ssh/telegram-bot.pem bot/telegram-bot.jar ubuntu@${{ secrets.EC2_IP }}:/home/ubuntu/bot/telegram-bot.jar
