--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -52,24 +52,19 @@ jobs:
         name: telegram-bot
         path: bot
 
-    # - name: Configure AWS credentials
-    #   uses: aws-actions/configure-aws-credentials@v4
-    #   with:
-    #     aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-    #     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-    #     aws-region: ${{ secrets.AWS_REGION }}
-
-    - name: Set up SSH key
+    - name: Deploy to AWS EC2
       run: |
         mkdir -p .ssh
+        
         echo "${{ secrets.SSH_KEY }}" > .ssh/telegram-bot.pem
-        chmod 600 .ssh/telegram-bot.pem
         SSH_KEYSCAN=$(ssh-keyscan -H "${{ secrets.EC2_IP }}")
         if ! grep -q "$SSH_KEYSCAN" .ssh/known_hosts; then
           echo "$SSH_KEYSCAN" >> .ssh/known_hosts
         fi
+        
+        ls -al .
+        echo
+        ls -al bot
 
-    - name: Deploy to AWS EC2
-      run: |
         scp -o StrictHostKeyChecking=no -i .ssh/telegram-bot.pem bot/telegram-bot.jar ubuntu@${{ secrets.EC2_IP }}:/home/ubuntu/bot/telegram-bot.jar
         ssh -o StrictHostKeyChecking=no -i .ssh/telegram-bot.pem ubuntu@${{ secrets.EC2_IP }} 'sudo systemctl restart telegram-bot.service'
