--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -50,6 +50,7 @@ jobs:
         mkdir -p .ssh
         
         echo "${{ secrets.SSH_KEY }}" > .ssh/telegram-bot.pem
+        chmod 600 .ssh/telegram-bot.pem
         # SSH_KEYSCAN=$(ssh-keyscan -H "${{ secrets.EC2_IP }}")
         # if ! grep -q "$SSH_KEYSCAN" .ssh/known_hosts; then
         #   echo "$SSH_KEYSCAN" >> .ssh/known_hosts
