--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -59,4 +59,4 @@ jobs:
         mv bot/*.jar bot/telegram-bot.jar
         
         scp -o StrictHostKeyChecking=no -i .ssh/telegram-bot.pem bot/telegram-bot.jar ubuntu@${{ secrets.EC2_IP }}:/home/ubuntu/bot/telegram-bot.jar
-        ssh -o StrictHostKeyChecking=no -i .ssh/telegram-bot.pem ubuntu@${{ secrets.EC2_IP }} "echo 'BOT_TOKEN=${{ secrets.BOT_TOKEN }}' | sudo tee -a /etc/environment && sudo systemctl restart telegram-bot.service"
+        ssh -o StrictHostKeyChecking=no -i .ssh/telegram-bot.pem ubuntu@${{ secrets.EC2_IP }} 'export BOT_TOKEN=${{ secrets.BOT_TOKEN }} && sudo systemctl restart telegram-bot.service'
