--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -47,14 +47,14 @@ jobs:
 
     - name: Deploy to AWS EC2
       run: |
-        mkdir -p .ssh
-        chmod 700 .ssh
-        echo "${{ secrets.SSH_KEY }}" > .ssh/telegram-bot.pem
-        chmod 600 .ssh/telegram-bot.pem
-        ssh-keyscan -H ${{ secrets.EC2_IP }} > .ssh/known_hosts
+        mkdir -p ~/.ssh
+        chmod 700 ~/.ssh
+        echo "${{ secrets.SSH_KEY }}" >> ~/.ssh/telegram-bot.pem
+        chmod 600 ~/.ssh/telegram-bot.pem
+        ssh-keyscan -H ${{ secrets.EC2_IP }} >> ~/.ssh/known_hosts
         
         mv bot/*.jar bot/telegram-bot.jar
 
-        scp -v -i .ssh/telegram-bot.pem bot/telegram-bot.jar ubuntu@${{ secrets.EC2_IP }}:/home/ubuntu/bot/telegram-bot.jar
-        ssh -o StrictHostKeyChecking=no -i .ssh/telegram-bot.pem ubuntu@${{ secrets.EC2_IP }} 'echo "BOT_TOKEN=${{ secrets.BOT_TOKEN }}" | sudo tee -a /etc/environment'
-        ssh -o StrictHostKeyChecking=no -i .ssh/telegram-bot.pem ubuntu@${{ secrets.EC2_IP }} 'sudo systemctl restart telegram-bot.service'
+        scp -v -i ~/.ssh/telegram-bot.pem bot/telegram-bot.jar ubuntu@${{ secrets.EC2_IP }}:/home/ubuntu/bot/telegram-bot.jar
+        ssh -o StrictHostKeyChecking=no -i .~/.ssh/telegram-bot.pem ubuntu@${{ secrets.EC2_IP }} 'echo "BOT_TOKEN=${{ secrets.BOT_TOKEN }}" | sudo tee -a /etc/environment'
+        ssh -o StrictHostKeyChecking=no -i ~/.ssh/telegram-bot.pem ubuntu@${{ secrets.EC2_IP }} 'sudo systemctl restart telegram-bot.service'
