--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -5,6 +5,18 @@ on:
     branches: [master]
 
 jobs:
+  static-test:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: 17
+        distribution: 'temurin'
+
+    - name: Run Checkstyle
+      run: mvn checkstyle:checkstyle
+
   build:
     runs-on: ubuntu-latest
     outputs:
@@ -22,6 +34,14 @@ jobs:
 
     - name: Build with Maven
       run: mvn clean compile assembly:single
+
+    - name: Cache Maven packages
+      uses: actions/cache@v3
+      with:
+        path: ~/.m2
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-m2-
 
     - name: Upload build artifact
       uses: actions/upload-artifact@v4
@@ -56,5 +76,4 @@ jobs:
         mv bot/*.jar bot/telegram-bot.jar
 
         scp -i ~/.ssh/telegram-bot.pem bot/telegram-bot.jar ubuntu@${{ secrets.EC2_IP }}:/home/ubuntu/bot/telegram-bot.jar
-        ssh -i ~/.ssh/telegram-bot.pem ubuntu@${{ secrets.EC2_IP }} 'echo "BOT_TOKEN=${{ secrets.BOT_TOKEN }}" | sudo tee -a /etc/environment'
         ssh -i ~/.ssh/telegram-bot.pem ubuntu@${{ secrets.EC2_IP }} 'sudo systemctl restart telegram-bot.service'
